--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div class="header__top-decor-element" aria-hidden="true"><span class="header__top-decor-element-rec" aria-hidden="true">rec</span></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -51,6 +52,7 @@
           надо
         </p>
       </div>
+     <div class="header__bottom-decor-element" aria-hidden="true"></div>
     </header>
     <script src="./scripts/script.js"></script>
   </body>
