--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="header__title-box">
         <h1 class="header__title">no focus</h1>
-        <p class="title-decor">
+        <p class="header__title-paragraph title-decor">
           Что делать, когда не можешь делать ничего <br />
           Или почему нам так сложно сконцентрироваться, особенно когда очень
           надо
@@ -56,6 +56,41 @@
       </div>
       <div class="header__bottom-decorative-element"></div>
     </header>
+
+    <main class="main">
+      <section class="section">
+        <h2 class="section__title">Почему сосредоточиться так сложно</h2>
+        <ul class="section__list">
+          <li class="section__list-item">
+            <h3 class="section__list-item-title title-decor">Многозадачность</h3>
+            <p class="section__list-item-paragraph">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело
+              концентрироваться даже на двух делах одновременно. А когда в поле
+              внимания попадает несколько важных задач, организм паникует и
+              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+              работаем невнимательно: ошибаемся и быстро устаём.
+            </p>
+          </li>
+          <li class="section__list-item">
+            <h3 class="section__list-item-title title-decor">Дофамин</h3>
+            <p class="section__list-item-paragraph">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
     <script src="./scripts/script.js"></script>
   </body>
 </html>
