--- a/index.html
+++ b/index.html
@@ -59,19 +59,26 @@
 
     <main class="main">
       <section class="section">
-        <h2 class="section__title">Почему сосредоточиться так сложно</h2>
+        <h2 class="section__title section__title-decor">
+          Почему сосредоточиться так сложно
+        </h2>
         <ul class="section__list">
           <li class="section__list-item">
-            <h3 class="section__list-item-title title-decor">Многозадачность</h3>
+            <h3 class="section__list-item-title title-decor">
+              Многозадачность
+            </h3>
             <p class="section__list-item-paragraph">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело
-              концентрироваться даже на двух делах одновременно. А когда в поле
-              внимания попадает несколько важных задач, организм паникует и
-              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-              работаем невнимательно: ошибаемся и быстро устаём.
+              её просто не существует. Исследователи
+              <a href="https://dana.org/article/multicosts-of-multitasking/"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
             </p>
           </li>
           <li class="section__list-item">
@@ -88,6 +95,169 @@
             </p>
           </li>
         </ul>
+      </section>
+      <section class="sectioon__decreased-concentration">
+        <h2
+          class="sectioon__decreased-concentration-title section__title-decor"
+        >
+          Что снижает концентрацию внимания?
+        </h2>
+        <ul class="sectioon__decreased-concentration-list">
+          <li
+            class="sectioon__decreased-concentration-list-item section__list-item"
+          >
+            <h3
+              class="sectioon__decreased-concentration-list-item-title title-decor"
+            >
+              Многозадачность
+            </h3>
+            <p
+              class="sectioon__decreased-concentration-list-item-paragraph section__list-item-paragraph"
+            >
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </li>
+          <li
+            class="sectioon__decreased-concentration-list-item section__list-item"
+          >
+            <h3
+              class="sectioon__decreased-concentration-list-item-title title-decor"
+            >
+              Еда
+            </h3>
+            <p
+              class="sectioon__decreased-concentration-list-item-paragraph section__list-item-paragraph"
+            >
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
+          </li>
+          <li
+            class="sectioon__decreased-concentration-list-item section__list-item"
+          >
+            <h3
+              class="sectioon__decreased-concentration-list-item-title title-decor"
+            >
+              Гаджеты
+            </h3>
+            <p
+              class="sectioon__decreased-concentration-list-item-paragraph section__list-item-paragraph"
+            >
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="section__better-concetnration">
+        <h2 class="section__better-concetnration-title section__title-decor">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+        <div class="section__better-concetnration-box">
+          <h3 class="section__better-concetnration-box-title title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <ul class="section__better-concetnration-box-list">
+            <li class="section__better-concetnration-box-list-item">
+              <p
+                class="section__better-concetnration-box-list-item-header-paragraph"
+              >
+                Представьте небо и облака
+              </p>
+              <p
+                class="section__better-concetnration-box-list-item-bottom-paragraph"
+              >
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое небо
+                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+                ясное небо всегда будет где-то там, за тучами, и никуда не
+                денется. Это упражнение поможет вернуться в настоящий момент, а
+                не волноваться о потенциальных проблемах из будущего.
+              </p>
+            </li>
+            <li class="section__better-concetnration-box-list-item">
+              <p
+                class="section__better-concetnration-box-list-item-header-paragraph"
+              >
+                Включите музыку
+              </p>
+              <p
+                class="section__better-concetnration-box-list-item-bottom-paragraph section__list-item-paragraph"
+              >
+                Но не любую, и не любимую. Любимая может быть связана с сильными
+                положительными эмоциями, которые тоже очень сильно отвлекают.
+                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+                попробовать включить плейлист в «белым шумом» или нейромузыкой.
+              </p>
+            </li>
+            <li class="section__better-concetnration-box-list-item">
+              <p
+                class="section__better-concetnration-box-list-item-header-paragraph"
+              >
+                Прогуляйтесь
+              </p>
+              <p
+                class="section__better-concetnration-box-list-item-bottom-paragraph section__list-item-paragraph"
+              >
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                показал, что созерцание природы повышает концентрацию, в то
+                время как после просмотра городских пейзажей она наоборот
+                понижается. Можно совместить прогулку с физическими упражнениями
+                или бегом — так в мозг поступит ещё больше кислорода и он будет
+                лучше работать. Но и простая двадцатиминутная прогулка — тоже
+                отличный вариант.
+              </p>
+            </li>
+            <li class="section__better-concetnration-box-list-item">
+              <p
+                class="section__better-concetnration-box-list-item-header-paragraph"
+              >
+                Хорошо ешьте
+              </p>
+              <p
+                class="section__better-concetnration-box-list-item-bottom-paragraph section__list-item-paragraph"
+              >
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например, с
+                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
+              </p>
+            </li>
+            <li class="section__better-concetnration-box-list-item">
+              <p
+                class="section__better-concetnration-box-list-item-header-paragraph"
+              >
+                Читайте
+              </p>
+              <p
+                class="section__better-concetnration-box-list-item-bottom-paragraph section__list-item-paragraph"
+              >
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или
+                даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
