--- a/index.html
+++ b/index.html
@@ -17,46 +17,41 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="header__top-box">
-        <nav class="header__theme-menu">
-          <ul class="header__theme-menu-list">
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_light"
-              >
-                день
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-                disabled
-              >
-                авто
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_dark"
-              >
-                неон
-              </button>
-            </li>
-          </ul>
-        </nav>
-        <div class="header__top-box-decorative-element" aria-hidden="true"><span></span></div>
-      </div>
-      <div class="header__title-box">
-        <h1 class="header__title">no focus</h1>
-        <p class="header__title-paragraph title-decor">
-          Что делать, когда не можешь делать ничего <br />
-          Или почему нам так сложно сконцентрироваться, особенно когда очень
-          надо
-        </p>
-      </div>
-      <div class="header__bottom-decorative-element decorative__element" aria-hidden="true"></div>
+      <div class="header__top-decorative-element"><span>rec</span></div>
+      <nav class="header__theme-menu">
+        <ul class="header__theme-menu-list">
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_light"
+            >
+              день
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+              disabled
+            >
+              авто
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_dark"
+            >
+              неон
+            </button>
+          </li>
+        </ul>
+      </nav>
+      <h1 class="header__title">no focus</h1>
+      <p class="header__paragraph title-decor">
+        Что делать, когда не можешь делать ничего <br />Или почему нам так
+        сложно сконцентрироваться, особенно когда очень надо
+      </p>
+      <div class="header__bottom-decorative-element"></div>
     </header>
-
+    
     <main class="main">
       <section class="section">
         <h2 class="section__title section__title-decor">
@@ -301,11 +296,10 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__top-decorative decorative__element" aria-hidden="true"></div>
+      <div class="footer__top-decorative-element"></div>
       <h2 class="footer__title">focus</h2>
-      <div class="footer__bottom-decorative decorative__element" aria-hidden="true"></div>
+      <div class="footer__bottom-decorative-element header__bottom-decorative-element"></div>
     </footer>
-
     <script src="./scripts/script.js"></script>
   </body>
 </html>
