--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="header__top-decorative-element"><span>rec</span></div>
+      <div class="header__top-decorative-element" aria-hidden="true"><span aria-hidden="true">rec</span></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -49,7 +49,7 @@
         Что делать, когда не можешь делать ничего <br />Или почему нам так
         сложно сконцентрироваться, особенно когда очень надо
       </p>
-      <div class="header__bottom-decorative-element"></div>
+      <div class="header__bottom-decorative-element" aria-hidden="true"></div>
     </header>
     
     <main class="main">
@@ -296,9 +296,9 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__top-decorative-element"></div>
+      <div class="footer__top-decorative-element" aria-hidden="true"></div>
       <h2 class="footer__title">focus</h2>
-      <div class="footer__bottom-decorative-element header__bottom-decorative-element"></div>
+      <div class="footer__bottom-decorative-element header__bottom-decorative-element" aria-hidden="true"></div>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
