--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="header__top-decorative-element" aria-hidden="true"><span aria-hidden="true">rec</span></div>
+      <div class="header__top-decorative-element" aria-hidden="true">
+        <span aria-hidden="true">rec</span>
+      </div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -51,7 +53,7 @@
       </p>
       <div class="header__bottom-decorative-element" aria-hidden="true"></div>
     </header>
-    
+
     <main class="main">
       <section class="section">
         <h2 class="section__title section__title-decor">
@@ -67,7 +69,9 @@
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
               её просто не существует. Исследователи
-              <a href="https://dana.org/article/multicosts-of-multitasking/"
+              <a
+                href="https://dana.org/article/multicosts-of-multitasking/"
+                target="_blank"
                 >выяснили</a
               >, что мозгу тяжело концентрироваться даже на двух делах
               одновременно. А когда в поле внимания попадает несколько важных
@@ -169,11 +173,11 @@
           </h3>
           <ul class="section__better-concetnration-box-list">
             <li class="section__better-concetnration-box-list-item">
-              <p
+              <h4
                 class="section__better-concetnration-box-list-item-header-paragraph"
               >
                 Представьте небо и облака
-              </p>
+              </h4>
               <p
                 class="section__better-concetnration-box-list-item-bottom-paragraph"
               >
@@ -188,11 +192,11 @@
               </p>
             </li>
             <li class="section__better-concetnration-box-list-item">
-              <p
+              <h4
                 class="section__better-concetnration-box-list-item-header-paragraph"
               >
                 Включите музыку
-              </p>
+              </h4>
               <p
                 class="section__better-concetnration-box-list-item-bottom-paragraph section__list-item-paragraph"
               >
@@ -203,17 +207,18 @@
               </p>
             </li>
             <li class="section__better-concetnration-box-list-item">
-              <p
+              <h4
                 class="section__better-concetnration-box-list-item-header-paragraph"
               >
                 Прогуляйтесь
-              </p>
+              </h4>
               <p
                 class="section__better-concetnration-box-list-item-bottom-paragraph section__list-item-paragraph"
               >
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  target="_blank"
                   >показал</a
                 >, что созерцание природы повышает концентрацию, в то время как
                 после просмотра городских пейзажей она наоборот понижается.
@@ -224,11 +229,11 @@
               </p>
             </li>
             <li class="section__better-concetnration-box-list-item">
-              <p
+              <h4
                 class="section__better-concetnration-box-list-item-header-paragraph"
               >
                 Хорошо ешьте
-              </p>
+              </h4>
               <p
                 class="section__better-concetnration-box-list-item-bottom-paragraph section__list-item-paragraph"
               >
@@ -240,11 +245,11 @@
               </p>
             </li>
             <li class="section__better-concetnration-box-list-item">
-              <p
+              <h4
                 class="section__better-concetnration-box-list-item-header-paragraph"
               >
                 Читайте
-              </p>
+              </h4>
               <p
                 class="section__better-concetnration-box-list-item-bottom-paragraph section__list-item-paragraph"
               >
@@ -264,7 +269,7 @@
         <div class="section__pictures-pictures-box">
           <img
             src="./images/sunset.png"
-            alt="Закат"
+            alt="Закат на побережье, с горами на фоне и ласточками"
             class="section__pictures-pictures-box-img"
             loading="lazy"
           />
@@ -276,19 +281,19 @@
           />
           <img
             src="./images/tape.png"
-            alt="Кассета"
+            alt="Аудио кассета с проигрывателем на фоне"
             class="section__pictures-pictures-box-img"
             loading="lazy"
           />
           <img
             src="./images/books.png"
-            alt="Книги"
+            alt="Стопка книг с надписями 'энциклопедия' и 'дневник'"
             class="section__pictures-pictures-box-img"
             loading="lazy"
           />
           <img
             src="./images/street.png"
-            alt="Улица"
+            alt="Улица с фиолетовым фоном"
             class="section__pictures-pictures-box-img"
             loading="lazy"
           />
@@ -298,7 +303,10 @@
     <footer class="footer">
       <div class="footer__top-decorative-element" aria-hidden="true"></div>
       <h2 class="footer__title">focus</h2>
-      <div class="footer__bottom-decorative-element header__bottom-decorative-element" aria-hidden="true"></div>
+      <div
+        class="footer__bottom-decorative-element header__bottom-decorative-element"
+        aria-hidden="true"
+      ></div>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
